--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   job1:
-    uses: Keboo/ActionsTest/.github/workflows/shared.yml@main
+    uses: Keboo/ActionsTest/.github/workflows/shared.yml
 
   job2:
     runs-on: ubuntu-latest
