--- a/.github/workflows/shared.yml
+++ b/.github/workflows/shared.yml
@@ -1,5 +1,8 @@
 name: Reusable workflow
 
+env:
+  my-version: 1.2.3
+
 on:
   workflow_call:
     # Map the workflow outputs to job outputs
@@ -10,6 +13,10 @@ on:
       secondword:
         description: "The second output string"
         value: ${{ jobs.example_job.outputs.output2 }}
+      my-version:
+        description: "Version number"
+        value: ${{ env.my-version }}
+      
 
 jobs:
   example_job:
