--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -9,16 +9,19 @@ jobs:
   job1:
     name: 'Test Name'
     uses: ./.github/workflows/shared.yml
-
-  job2:
-    runs-on: ubuntu-latest
-    needs: job1
-    steps:
-      - run: echo ${{ needs.job1.outputs.firstword }} ${{ needs.job1.outputs.secondword }}
-      - run: echo ${{ needs.job1.outputs.my-version }}
-
+    
   job3:
-    name: 'Test Name'
     uses: ./.github/workflows/shared.yml
     with:
       is-foo: true
+  
+  job2:
+    runs-on: ubuntu-latest
+    needs: [job1, job3]
+    steps:
+      - run: echo ${{ needs.job1.outputs.firstword }} ${{ needs.job1.outputs.secondword }}
+      - run: echo ${{ needs.job1.outputs.my-version }}
+      - run: echo ${{ needs.job3.outputs.my-version }}
+      
+
+
