--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       - run: echo ${{ needs.job1.outputs.firstword }} ${{ needs.job1.outputs.secondword }}
       - run: echo ${{ needs.job1.outputs.my-version }}
+      - run: echo ${{ needs.job1.outputs.my-version2 }}
       - run: echo ${{ needs.job3.outputs.my-version }}
       
 
