--- a/.github/workflows/shared.yml
+++ b/.github/workflows/shared.yml
@@ -33,7 +33,7 @@ jobs:
     outputs:
       output1: ${{ steps.step1.outputs.firstword }}
       output2: ${{ steps.step2.outputs.secondword }}
-      my-version: ${{ steps.output_version.my-version}}
+      my-version: ${{ steps.output_version.outputs.my-version}}
     steps:
       - id: step1
         run: echo "firstword=hello" >> $GITHUB_OUTPUT
