--- a/.github/workflows/shared.yml
+++ b/.github/workflows/shared.yml
@@ -40,6 +40,7 @@ jobs:
       - id: step2
         run: echo "secondword=world" >> $GITHUB_OUTPUT
       - id: set_version
+        if: ${{ inputs.is-foo }}
         run: echo "version=3.2.1-ci" >> $GITHUB_ENV
       - id: output_version
         run: |
