--- a/.github/workflows/shared.yml
+++ b/.github/workflows/shared.yml
@@ -44,5 +44,5 @@ jobs:
         run: echo "version=${{ env.version }}-ci" >> $GITHUB_ENV
       - id: output_version
         run: |
-          echo $version
+          echo ${{ env.version }}
           echo "my-version=$version" >> $GITHUB_OUTPUT
